<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--1画の文字-->
    <!-- 0.トップ画面 入力ボタンメッセージ-->
    <string name="TopScreen">入力ボタンを押してください\n\n\n\n\n\n\n\n\n</string>
    <!-- 0.トップ画面2 クリアボタンメッセージ-->
    <string name="PushClearButtonMessage">クリアボタンを押してください\n\n\n\n\n\n\n\n\n</string>
    <!--1.メイン画面-->
    <string name="Main_Screen_NoSelect">番号を選んでください\n1.番号の爻象を見る\n2.設定\n3.ヘルプ\n\n\n\n\n\n番号:%d.無選択</string>
    <!--1.メイン画面 選択肢1-->
    <string name="Main_Screen_Select1">番号を選んでください\n1.番号の爻象を見る\n2.設定\n3.ヘルプ\n\n\n\n\n\n番号:%d.番号の爻象を見る</string>
    <!--1.メイン画面 選択肢2-->
    <string name="Main_Screen_Select2">番号を選んでください\n1.番号の爻象を見る\n2.設定\n3.ヘルプ\n\n\n\n\n\n番号:%d.設定</string>
    <!--1.メイン画面 選択肢3-->
    <string name="Main_Screen_Select3">番号を選んでください\n1.番号の爻象を見る\n2.設定\n3.ヘルプ\n\n\n\n\n\n番号:%d.ヘルプ</string>
    <!--1.メイン画面1 選択肢1-0 選択肢無選択-->
    <string name="Main_Screen1_NoSelect">番号を選んでください\n1.名前の吉凶\n2.男女の相性占い\n3.メイン画面\n\n\n\n\n番号:%d.無選択</string>
    <!--1.メイン画面1 選択肢1-1 選択肢1-->
    <string name="Main_Screen1_Select1">番号を選んでください\n1.名前の吉凶\n2.男女の相性占い\n3.メイン画面\n\n\n\n\n番号:%d.名前の吉凶</string>
    <!--1.メイン画面1 選択肢1 選択肢2-->
    <string name="Main_Screen1_Select2">番号を選んでください\n1.名前の吉凶\n2.男女の相性占い\n3.メイン画面\n\n\n\n\n番号:%d.男女の相性占い</string>
    <!--1.メイン画面1 姓名判断 選択肢3-->
    <string name="Main_Screen1_Select3">番号を選んでください\n1.名前の吉凶\n2.男女の相性占い\n3.メイン画面\n\n\n\n\n番号:%d.メイン画面</string>
    <!--1-1 Clear Screen And 番号入力 -->
    <string name="Input_Number_Screen">番号を入力してください\n\n\n\n\n\n\n\n番号:%d</string>
　　　<!--吉凶の結果表示 範囲内の時-->
    <string name="Result_Kikkyo_Screen">番号:%1$d\n吉凶:%2$s\n\n\n\n\n\nクリアボタンを押してください</string>
    　<!--吉凶の結果表示 範囲外の時-->
    <string name="Result_Kikkyo_Screen_else">番号:%1$dはまだ吉凶は\n実装されていません。\n\n\n\n\n\nクリアボタンを押してください</string>

    <!--1-3 Help -->
    <string name="Help_Menu_Top_NoSelect">番号を選んでください\n1.バージョン\n2.参考文献\n\n\n\n番号:%d.無選択</string>
    <string name="Help_Menu_Top_Select1">番号を選んでください\n1.バージョン\n2.参考文献\n\n\n\n番号:%d.バージョン</string>
    <string name="Help_Menu_Top_Select2">番号を選んでください\n1.バージョン\n2.参考文献\n\n\n\n番号:%d.参考文献</string>

    <string name="app_name">My Application</string>
    <string name="app_Title1">ひな形アプリ１</string>
    <string name="app_Title2">ひな形アプリ2</string>
    <string name="app_Title3">ひな形アプリ3</string>
    <string name="Button_seven">7</string>
    <string name="Button_eight">8</string>
    <string name="Button_nine">9</string>
    <string name="Button_four">4</string>
    <string name="Button_five">5</string>
    <string name="Button_six">6</string>
    <string name="Button_one">1</string>
    <string name="Button_two">2</string>
    <string name="Button_three">3</string>
    <string name="Button_clear">クリア</string>
    <string name="Button_zero">0</string>
    <string name="Button_EXE">入 力</string>
    <string name="title">Version</string>
    <string name="message">Version:0.0.1\nDate:2020.11.29\nAuthor:<b>licksjp</b>\n(C)<b>licksjp</b> All rights reserved</string>
    <string name="ok">OK</string>
    <string name="nameMessage">あなたの名前を入れてください</string>
    <string name="editname">名前(漢字で姓を入力):</string>
    <string name="editname2">名前(漢字で名を入力):</string>
    <string name="OKButton">鑑定</string>
    <string name="ClearButton">クリア</string>
    <string name="resultOkButton">トップに行く</string>
    <string name="Version">Version</string>
    <string name="Reference">Title:人生が好転する4けた数字開運術\nAuthor:金　河(キム ハ)\n出版社:扶桑社\nISBN978-4-594-07752-5\n定価:1300円+税\n</string>
    <string name="Reference_Title">参考文献</string>
    <string name="create"></string>
</resources>
